@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-12-23T02:09:52Z",
-  "count_outdated" : 275,
-  "uniques_outdated" : 208,
+  "timestamp" : "2025-12-25T02:09:56Z",
+  "count_outdated" : 276,
+  "uniques_outdated" : 209,
   "count" : 277,
   "uniques" : 210,
   "clones" : [
-    {
-      "timestamp": "2025-12-10T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-12-22T00:00:00Z",
       "count": 1,
